--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
   ],  
   "compilerOptions": {
     "jsx": "react-jsx",
-    "types": ["vitest/globals","node"]    
+    "types": ["vitest/globals","node"],
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    }    
   }  
 }
