--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
@@ -10,6 +11,7 @@
     "paths": {
       "@/*": ["*"]
     },
+    "rootDir": "src",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
